Add unpkg url to example HTML

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width">
     <title>Magic Sandbox Test</title>
     <script src="magic-sandbox.js"></script>
+    <!--
+    <script src="https://unpkg.com/magic-sandbox@0.3.0/magic-sandbox.min.js"></script>
+    -->
   </head>
   <body>
     <script type="template" id="template">
