--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           content: "A,B,C\n1,2,3\n4,5,6"
         }
       };
-      var source = magicSandbox.parseCode(template, files);
+      var source = magicSandbox(template, files);
       sandbox.setAttribute("srcdoc", source);
     </script>
   </body>
