--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Magic Sandbox Test</title>
-    <script src="magic-sandbox.js"></script>
-    <!--
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Magic Sandbox Test</title>
+  <script src="magic-sandbox.js"></script>
+  <!--
     <script src="https://unpkg.com/magic-sandbox@0.3.0/magic-sandbox.min.js"></script>
     -->
-  </head>
-  <body>
-    <script type="template" id="template">
+</head>
+
+<body>
+  <script type="template" id="template">
       <!DOCTYPE html>
       <html>
         <head>
@@ -21,7 +23,10 @@
         <body>
           <h1>HELLO</h1>
           <p id="p"></p>
+          <h4>using XMLHttpRequest</h4>
           <pre id="data"></pre>
+          <h4>using fetch</h4>
+          <pre id="data-from-fetch"></pre>
           <script src="fillParagraph.js"><\/script>
           <script>
             var request = new XMLHttpRequest();
@@ -29,26 +34,34 @@
               document.getElementById("data").textContent = this.responseText;
             };
             request.open("GET", "data.csv", true);
-            request.send(null); 
+            request.send(null);
+
+
+            fetch("data.csv")
+            .then(function(res){ return res.text() })
+            .then(function(text) {
+              document.getElementById("data-from-fetch").textContent = text;
+            });
           <\/script>
         </body>
       </html>
     </script>
-    <iframe id="sandbox"></iframe>
-    <script>
-      var template = document.getElementById("template")
-        .textContent.replace(/\\\//g, "/");
-      var sandbox = document.getElementById("sandbox");
-      var files = {
-        "fillParagraph.js": {
-          content: "document.getElementById('p').textContent = 'Dynamic';"
-        },
-        "data.csv": {
-          content: "A,B,C\n1,2,3\n4,5,6"
-        }
-      };
-      var source = magicSandbox(template, files);
-      sandbox.setAttribute("srcdoc", source);
-    </script>
-  </body>
+  <iframe id="sandbox"></iframe>
+  <script>
+    var template = document.getElementById("template")
+      .textContent.replace(/\\\//g, "/");
+    var sandbox = document.getElementById("sandbox");
+    var files = {
+      "fillParagraph.js": {
+        content: "document.getElementById('p').textContent = 'Dynamic';"
+      },
+      "data.csv": {
+        content: "A,B,C\n1,2,3\n4,5,6"
+      }
+    };
+    var source = magicSandbox(template, files);
+    sandbox.setAttribute("srcdoc", source);
+  </script>
+</body>
+
 </html>
